<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather">weather</string>
    <string name="get_weather">Get weather</string>
    <string name="location">Nhập nơi ở</string>
    <string name="location_notfound">Không tìm thấy địa điểm</string>
    <string name="tv_Location">Location</string>
    <string name="_0_c">0°C</string>
    <string name="percent_3">3%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Đăng xuất</string>
    <string name="do_am">Độ ẩm</string>
    <string name="toc_do_gio">Tốc độ gió</string>
    <string name="weather_24h">Thời tiết 24H tới</string>
    <string name="remember_login">Remember login</string>
    <string name="enter_your_user">Enter your User</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up_weather">Sign up Weather</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="nh_p_v_tr">Nhập vị trí</string>
    <string name="quan_ly_tinh_tp">Quản lý tỉnh thành phố</string>
    <string name="login_weather">Login Weather</string>
</resources>