<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_icon"
        android:id="@+id/btn_back"/>

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="right"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wind"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#EF6115"
                    android:textSize="34dp"
                    android:textStyle="bold"
                    android:text="@string/sign_up_weather"/>
            </LinearLayout>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/wind"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_baseline_account_circle_24"/>
                <EditText
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_name"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textColor="@color/white"
                    android:shadowRadius="2"
                    android:hint="@string/enter_your_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_baseline_email_24"/>
                <EditText
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_email"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:textColor="@color/white"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:hint="@string/enter_your_email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_baseline_lock_24"/>
                <EditText
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edt_password"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textColor="@color/white"
                    android:shadowRadius="2"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_baseline_add_home_work_24"/>
                <EditText
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edt_location"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textColor="@color/white"
                    android:shadowRadius="2"
                    android:hint="@string/enter_your_location"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:id="@+id/btn_register"
                android:backgroundTint="#4CAF50"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>